--- a/setup.cfg
+++ b/setup.cfg
@@ -96,6 +96,8 @@ filterwarnings =
     ignore::UserWarning
     # WCSAxes is raising this
     ignore:FLIP_TOP_BOTTOM is deprecated
+    # This is hit on oldestdeps
+    ignore:distutils Version classes are deprecated
 
 [flake8]
 exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
