--- a/tox.ini
+++ b/tox.ini
@@ -68,6 +68,12 @@ deps =
     figure: matplotlib==3.3.2
     figure-!devdeps: astropy==4.2.0
     figure-!devdeps: mpl_animators==1.0.0
+    # In 0.2.1 asdf-astropy pinned astropy>=5.0.4 for "reasons"
+    # This messes with our versioning so we don't use that version here.
+    # When we are doing figure tests with astropy 5.0+ we can remove this pin.
+    figure-!devdeps: asdf-astropy<0.2.1
+    figure-!devdeps: gwcs<0.18.1
+
 
 # The following indicates which extras_require from setup.cfg will be installed
 # We use test and all so we don't install docs when we don't need it (as
