--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ deps =
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
     # Astropy is installed from the nightly wheels
-    devdeps: astropy>=5.0dev0,<5.0a0
+    devdeps: astropy>=0.0dev0
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: git+https://github.com/sunpy/mpl-animators
     devdeps: git+https://github.com/spacetelescope/gwcs
