--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,28 +77,14 @@ jobs:
     secrets:
       pypi_token: ${{ secrets.pypi_token }}
 
-  notify_pass:
+  notify:
     if: github.event_name == 'workflow_dispatch'
     needs: [publish, cron]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: sunpy/sunpy/.github/actions/matrix@main
+      - uses: Cadair/matrix-notify-action@main
         with:
-          status: 'Succeeded'
-          token: ${{ secrets.matrix_access_token }}
-          homeserver: ${{ secrets.matrix_homeserver }}
-          roomid: '%21TWSJXVpyflnZOzmSQz:matrix.org'
-
-  notify_fail:
-    if: failure() && github.event_name == 'workflow_dispatch'
-    needs: [publish, cron]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: sunpy/sunpy/.github/actions/matrix@main
-        with:
-          status: 'Failed'
-          token: ${{ secrets.matrix_access_token }}
-          homeserver: ${{ secrets.matrix_homeserver }}
-          roomid: '%21TWSJXVpyflnZOzmSQz:matrix.org'
+          matrix_token: ${{ secrets.matrix_access_token }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          homeserver: ${({ secrets.matrix_homeserver })}
+          roomid: '!TWSJXVpyflnZOzmSQz:matrix.org'
