--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
       pypi_token: ${{ secrets.pypi_token }}
 
   notify:
-    if: github.event_name == 'workflow_dispatch'
+    if: always() && github.event_name == 'workflow_dispatch'
     needs: [publish, cron]
     runs-on: ubuntu-latest
     steps:
