--- a/tox.ini
+++ b/tox.ini
@@ -11,87 +11,38 @@ envlist =
 
 [testenv]
 pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
-<<<<<<<
-=======
 # Run the tests in a temporary directory to make sure that we don't import
 # the package from the source tree
 change_dir = .tmp/{envname}
->>>>>>>
 # We use bash in some of our environments so we have to whitelist it.
 allowlist_externals=
     /bin/bash
     /usr/bin/bash
 # Run the tests in a temporary directory to make sure that we don't import ndcube from the source tree
-changedir = .tmp/{envname}
 description =
     run tests
     oldestdeps: with the oldest supported version of key dependencies
     devdeps: with the latest developer version of key dependencies
-<<<<<<<
     online: that require remote data (as well as the offline ones)
     figure: runs the figure test suite.
-
-=======
->>>>>>>
 pass_env =
     # A variable to tell tests we are on a CI system
     CI
-<<<<<<<
     # Custom compiler locations (such as ccache)
     CC
     # Location of locales (needed by sphinx on some systems)
     LOCALE_ARCHIVE
     # If the user has set a LC override we should follow it
     LC_ALL
-
 set_env =
     MPLBACKEND = agg
     COLUMNS = 180
     PYTEST_COMMAND = pytest -vvv -r fEs --pyargs ndcube --cov-report=xml --cov=ndcube --cov-config={toxinidir}/.coveragerc {toxinidir}/docs
     PARFIVE_HIDE_PROGESS = True
     devdeps: PIP_EXTRA_INDEX_URL = https://pypi.anaconda.org/astropy/simple https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
-=======
     LOCALE_ARCHIVE
     # If the user has set a LC override we should follow it
     LC_ALL
-set_env =
-    MPLBACKEND = agg
-    devdeps: PIP_EXTRA_INDEX_URL = https://pypi.anaconda.org/astropy/simple https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
-deps =
-    # For packages which publish nightly wheels this will pull the latest nightly
-    devdeps: numpy>=0.0.dev0
-    # Packages without nightly wheels will be built from source like this
-    # devdeps: git+https://github.com/ndcube/ndcube
-    oldestdeps: minimum_dependencies
-# The following indicates which extras_require will be installed
-extras =
-    tests
-commands_pre =
-    oldestdeps: minimum_dependencies ndcube --filename requirements-min.txt
-    oldestdeps: pip install -r requirements-min.txt
-    pip freeze --all --no-input
-commands =
-    # To amend the pytest command for different factors you can add a line
-    # which starts with a factor like `online: --remote-data=any \`
-    # If you have no factors which require different commands this is all you need:
-    pytest \
-    -vvv \
-    -r fEs \
-    --pyargs ndcube \
-    --cov-report=xml \
-    --cov=ndcube \
-    --cov-config={toxinidir}/.coveragerc \
-    {toxinidir}/docs \
-    {posargs}
-
-[testenv:codestyle]
-pypi_filter =
->>>>>>>
-passenv =
-    HTTP_PROXY
-    HTTPS_PROXY
-    NO_PROXY
-    CIRCLECI
 deps =
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
@@ -112,6 +63,7 @@ deps =
     figure-!devdeps: mpl-animators==1.0.0
     figure-!devdeps: scipy
     figure-!devdeps: dask
+# The following indicates which extras_require will be installed
 extras =
     plotting
     reproject
@@ -122,13 +74,24 @@ commands_pre =
     oldestdeps: python -c "import astropy.time; astropy.time.update_leap_seconds()"
     pip freeze --all --no-input
 commands =
-    !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --reruns 2 --reruns-delay 15 --timeout=180 --remote-data=any {posargs}
     figure: /bin/bash -c "mkdir -p ./figure_test_images; python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)' > ./figure_test_images/figure_version_info.txt"
     figure: /bin/bash -c "pip freeze >> ./figure_test_images/figure_version_info.txt"
     figure: /bin/bash -c "cat ./figure_test_images/figure_version_info.txt"
     figure: python -c "import ndcube.tests.helpers as h; print(h.get_hash_library_name())"
-    figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/ndcube-main/figures/{envname}/ {posargs}
+    # To amend the pytest command for different factors you can add a line
+    # which starts with a factor like `online: --remote-data=any \`
+    # If you have no factors which require different commands this is all you need:
+    pytest \
+    -vvv \
+    -r fEs \
+    --pyargs ndcube \
+    --cov-report=xml \
+    --cov=ndcube \
+    --cov-config={toxinidir}/.coveragerc \
+    online: --remote-data=any \
+    figure: -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/ndcube-main/figures/{envname}/ \
+    {toxinidir}/docs \
+    {posargs}
 
 [testenv:build_docs]
 changedir = docs
