--- a/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
+++ b/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
@@ -14,3 +14,9 @@ tags:
 
   - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/TimeTableCoordinate-0.1.0"
     schema_uri: "asdf://sunpy.org/ndcube/schemas/TimeTableCoordinate-0.1.0"
+
+  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/QuantityTableCoordinate-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/QuantityTableCoordinate-0.1.0"
+
+  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/SkyCoordTableCoordinate-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/SkyCoordTableCoordinate-0.1.0"
