--- a/pytest.ini
+++ b/pytest.ini
@@ -25,6 +25,8 @@ addopts =
     -p no:threadexception
     -m "not mpl_image_compare"
     --doctest-ignore-import-errors
+asdf_schema_tests_enabled = true
+asdf_schema_root = ndcube/asdf/resources
 remote_data_strict = True
 filterwarnings =
     # Turn all warnings into errors so they do not pass silently.
@@ -49,3 +51,4 @@ filterwarnings =
     ignore:Animating a NDCube does not support transposing the array. The world axes may not display as expected because the array will not be transposed:UserWarning
     # This is raised by the Windows and mac os build for visualization.rst
     ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning
+
