--- a/pytest.ini
+++ b/pytest.ini
@@ -49,3 +49,5 @@ filterwarnings =
     # This is raised by the Windows and mac os build for visualization.rst
     ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning
 remote_data_strict = True
+doctest_subpackage_requires =
+    docs/explaining_ndcube/* = numpy>=2.0.0
