--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,7 @@ jobs:
       uses: OpenAstronomy/github-actions-workflows/.github/workflows/publish_pure_python.yml@v1
       with:
         python-version: '3.10'
-        test_extras: 'tests'
+        test_extras: 'dev'
         test_command: 'pytest -p no:warnings --doctest-rst --pyargs ndcube'
         submodules: false
       secrets:
