--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,11 @@ jobs:
       if: |
         github.event_name != 'pull_request' && (
           github.ref_name != 'main' ||
-          github.event_name == 'workflow_dispatch' )
+          github.event_name == 'workflow_dispatch' 
+        ) || (
+          github.event_name == 'pull_request' &&
+          contains(github.event.pull_request.labels.*.name, 'Run publish')
+        )
       needs: [test, docs]
       uses: OpenAstronomy/github-actions-workflows/.github/workflows/publish_pure_python.yml@v1
       with:
