--- a/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
+++ b/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
@@ -23,3 +23,12 @@ tags:
 
   - tag_uri:  "tag:sunpy.org:ndcube/global_coords/globalcoords-0.1.0"
     schema_uri: "asdf://sunpy.org/ndcube/schemas/global_coords-0.1.0"
+
+  - tag_uri:  "tag:sunpy.org:ndcube/resampledwcs-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/resampledwcs-0.1.0"
+
+  - tag_uri:  "tag:sunpy.org:ndcube/reorderedwcs-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/reorderedwcs-0.1.0"
+
+  - tag_uri:  "tag:sunpy.org:ndcube/compoundwcs-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/compoundwcs-0.1.0"
