--- a/ndcube/asdf/resources/schemas/ndcube-0.1.0.yaml
+++ b/ndcube/asdf/resources/schemas/ndcube-0.1.0.yaml
@@ -23,6 +23,10 @@ properties:
     type: object
   mask:
     type: object
+  unit:
+    anyOf:
+     - tag: "tag:stsci.edu:asdf/unit/unit-1.*"
+     - tag: "tag:astropy.org:astropy/units/unit-1.*"
 
 required: [data, wcs]
 additionalProperties: true
