Apply suggestions from code review

--- a/ndcube/asdf/resources/schemas/resampledwcs-0.1.0.yaml
+++ b/ndcube/asdf/resources/schemas/resampledwcs-0.1.0.yaml
@@ -14,9 +14,9 @@ properties:
   wcs:
     tag: "tag:stsci.edu:gwcs/wcs-1.*"
   factor:
-    type: object
+    tag: "tag:stsci.edu:asdf/core/ndarray-1.0.0"
   offset:
-    type: object
+    tag: "tag:stsci.edu:asdf/core/ndarray-1.0.0"
 
 required: [wcs]
 additionalProperties: true
