--- a/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
+++ b/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
@@ -27,8 +27,14 @@ tags:
   - tag_uri:  "tag:sunpy.org:ndcube/resampledwcs-0.1.0"
     schema_uri: "asdf://sunpy.org/ndcube/schemas/resampledwcs-0.1.0"
 
+  - tag_uri:  "tag:sunpy.org:ndcube/ndcube/ndcube_sequence-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/ndcube_sequence-0.1.0"
+
   - tag_uri:  "tag:sunpy.org:ndcube/reorderedwcs-0.1.0"
     schema_uri: "asdf://sunpy.org/ndcube/schemas/reorderedwcs-0.1.0"
 
   - tag_uri:  "tag:sunpy.org:ndcube/compoundwcs-0.1.0"
     schema_uri: "asdf://sunpy.org/ndcube/schemas/compoundwcs-0.1.0"
+
+  - tag_uri:  "tag:sunpy.org:ndcube/ndcube/ndcollection-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/ndcollection-0.1.0"
