--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,8 +92,6 @@ jobs:
       toxdeps: tox-pypi-filter
       envs: |
         - linux: py311-devdeps
-<<<<<<<
-=======
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
@@ -115,31 +113,10 @@ jobs:
       submodules: false
     secrets:
       pypi_token: ${{ secrets.pypi_token }}
->>>>>>>
-    secrets:
-      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-  publish_pure:
-      if: |
-        github.event_name != 'pull_request' && (
-          github.ref_name != 'main' ||
-          github.event_name == 'workflow_dispatch'
-        ) || (
-          github.event_name == 'pull_request' &&
-          contains(github.event.pull_request.labels.*.name, 'Run publish')
-        )
-      needs: [test, docs]
-      uses: OpenAstronomy/github-actions-workflows/.github/workflows/publish_pure_python.yml@v1
-      with:
-        python-version: '3.10'
-        test_extras: 'dev'
-        test_command: 'pytest -p no:warnings --doctest-rst --pyargs ndcube'
-        submodules: false
-      secrets:
-        pypi_token: ${{ secrets.pypi_token }}
   notify:
     if: always() && github.event_name == 'workflow_dispatch'
-    needs: [publish_pure, cron]
+    needs: [publish, cron]
     runs-on: ubuntu-latest
     steps:
       - uses: Cadair/matrix-notify-action@main
